# private-zato-notes-app

./: .gitignore  CMakeLists.txt  Makefile  build.js  notes-app.desktop  package.json  settings.json
notes/: .ui-state.json  Untitled-1.md  Untitled-10.md  Untitled-11.md  Untitled-12.md  Untitled-13.md  Untitled-14.md  Untitled-15.md  Untitled-16.md  Untitled-17.md  Untitled-18.md  Untitled-19.md  Untitled-2.md  Untitled-20.md  Untitled-21.md  Untitled-3.md  Untitled-4.md  Untitled-5.md  Untitled-6.md  Untitled-7.md  Untitled-9.md
prompts/: default.md
src/: MainWindow.cpp  MainWindow.h  MainWindow_edit.cpp  MainWindow_files.cpp  MainWindow_git.cpp  MainWindow_persist.cpp  MainWindow_recent.cpp  MainWindow_setup.cpp  MainWindow_zoom.cpp  NoteRowDelegate.cpp  NoteRowDelegate.h  index.html  main.cpp  main.js  preload.js  renderer.js  styles.css
test/: test_code_block.js  test_first_line.js
